<resources>
    <string name="app_name">Sharimage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="dialog_title">Choose Gallery or Camera:</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
</resources>
